--- a/package.json
+++ b/package.json
@@ -22,12 +22,20 @@
   "dependencies": {
     "@nestjs-architects/typed-cqrs": "^1.1.2-alpha.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/cqrs": "^10.2.7",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "i": "^0.3.7",
+    "npm": "^10.7.0",
+    "openai": "^4.45.0",
+    "purify-ts": "^2.0.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
