--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "i": "^0.3.7",
+    "joi": "^17.13.1",
     "npm": "^10.7.0",
     "openai": "^4.45.0",
     "purify-ts": "^2.0.3",
